# let_there_be_flight

./: .gitattributes  .gitignore  .gitmodules  .redscript-ide  Addresses-VFT.hpp  CMakeLists.txt  Enum-VFT.hpp  NewVehicles.reds  build.bat  build.ini  build_install_no_confirm.bat  cliff.toml  compile_commands.json  compile_flags.txt  dbg-symbols  let_there_be_flight.code-workspace  license.md  modSettings.cfg  new_vehicles_notes.txt  readme.md  requirements.md  shields.json  todo.md  workspace.code-workspace
Possible Natives/: CResource.reds  physicsISystemObject.reds  physicsSimulationType.reds  physicsSystemBody.reds  physicsSystemBodyParams.reds
cmake/: ConfigureAndIncludeCodeware.cmake  ConfigureAndIncludeDetours.cmake  ConfigureAndIncludeFMOD.cmake  ConfigureAndIncludeRED4extSdk.cmake  ConfigureAndIncludeSpdlog.cmake  ConfigureDefaultOutputDirectories.cmake  ConfigureVersionFromGit.cmake  CreateRED4extSignatures.cmake  CreateUninstallScript.cmake  FindAllRED4extAddresses.cmake  FindCodeware.cmake  FindDetours.cmake  FindFMOD.cmake  FindIndividualRED4extAddresses.cmake  FindInputLoader.cmake  FindModSettings.cmake  FindPhysX3.cmake  FindRED4ext.SDK.cmake  FindRedLib.cmake  FindSpdlog.cmake  Header.txt  Header.txt.in  PackFiles.cmake  PackRedscriptFiles.cmake  TargetOutputDirectory.cmake  uninstall.bat.in
cyber_engine_tweaks/: init.lua  new_vehicle.lua
experiments/: ColliderComponent.reds  ECookingPlatform.reds  FlightComponentPS.reds  FlightControllerUI.reds  FlightDevice.reds  FlightFx.reds  FlightHUDGameController.reds  ISerializable.reds  PhysicalBodyInterface.reds  QuickHackFlightMalfunction.reds  flight_control.yaml  flight_effects.archive.xl  inkWidgetBuilder.reds  new_vehicles_notes.txt  no_death_fall.tweak  physicsICollider.reds  physicsSystemJoint.reds  physicsSystemResource.reds  quickhack.tweak  quickhacks.yaml  statemachinenotes.tweak  thrusters.yaml  vehicle.tweak  vehicleChassisComponent.reds  vehicleTPPCameraComponent.reds  vflightUIGameController.reds
flight_effects/: flight_effects.cpmodproj  layout.xml
fmod_studio/: flight_control.fspro
prereqs/: CMakeLists.txt
red4ext/: .clang-format  .editorconfig  .gitignore  flight_control.sln
redscript/: FlightAudio.reds  FlightAudioStats.reds  FlightControl.reds  FlightControlMessage.reds  FlightControlModule.reds  FlightControlUI.reds  FlightController.reds  FlightControllerUI.reds  FlightHUDController.reds  FlightHUDGameController.reds  FlightHUDLogicController.reds  PID.reds  (+15 more)
src/red4ext/: .clang-format  Addresses.hpp  CMakeLists.txt  CreateStaticEffect.cpp  CustomHUDLayer.cpp  CustomInput.cpp  CustomOptions.cpp  DebugPrinter.cpp  Definitions.hpp  DriveHelper-inl.hpp  DriveHelper.hpp  EntityAddComponent.cpp  EntityAddComponent.hpp  FlightAudio.cpp  FlightAudio.hpp  FlightCamera.cpp  FlightCamera.hpp  FlightComponent.cpp  FlightComponent.hpp  FlightConfiguration.cpp  FlightConfiguration.hpp  FlightController.cpp  FlightController.hpp  FlightEvents.cpp  FlightEvents.hpp  FlightHUDGameController.cpp  FlightHUDGameController.hpp  FlightHelper.cpp  FlightHelper.hpp  FlightHelperWrapper.cpp  FlightHelperWrapper.hpp  FlightLog.cpp  FlightLog.hpp  FlightModule.hpp  FlightNavPath.cpp  FlightSettings.cpp  FlightSettings.hpp  FlightStats_Record.cpp  FlightSystem.cpp  FlightSystem.hpp  (+31 more)
src/red4ext/Audio/: FlightAudio.cpp  FlightAudio.hpp  FmodHelper.hpp
src/red4ext/Camera/: FlightCamera.cpp  FlightCamera.hpp
src/red4ext/Effects/: AudioEffects.cpp  VisualEffects.cpp
src/red4ext/Engine/: Common.hpp  RTTIClass.hpp  RTTIEnum.hpp  RTTIExpansion.hpp  RTTIRegistrar.cpp  RTTIRegistrar.hpp
src/red4ext/Extensions/: EffectSpawnerComponent.cpp  EntColliderComponent.cpp  FxResource.cpp  InkMaskWidget.cpp  InkShapeWidget.cpp  InkWidget.cpp  MaterialFx.cpp  MaterialFx.hpp  MeshComponent.cpp  MeshComponent.hpp  VehicleChassisComponent.cpp  VehicleDriveToPointEvent.cpp  VehicleObject.cpp  VehicleTPPCameraComponent.cpp  WheeledObject.cpp
src/red4ext/Flight/: Component.cpp  Component.hpp  Log.cpp  Log.hpp
src/red4ext/Hooks/: CreateStaticEffect.cpp  Entity_InitializeComponents.cpp  FPPCamera_Update.cpp  GetLocalizedText.cpp  GetMatrixFromOrientation.hpp  IsKey.cpp  StateMachine.hpp  TPPCameraStats_Update.cpp  VehicleObject_ProcessWeapons.cpp  VisualEffects.cpp  vehicleTPPCameraComponent_GetLocationFromOffset.cpp  vehicleTPPCameraComponent_GetYaw.cpp  vehicleTPPCameraComponent_UpdatePitch.cpp  vehicleUnk570_WheelEffectUpdate.cpp  vehicleUnk580_UpdateTireParameters.cpp
src/red4ext/Physics/: VehiclePhysicsUpdate.cpp  VehiclePhysicsUpdate.hpp  VehicleSpeedUnlimiter.cpp  VehicleSpeedUnlimiter.hpp
src/red4ext/ScriptDefinitions/: ScriptDefinitions.hpp  ScriptHost.hpp
src/red4ext/Utils/: FileStream.cpp  FileStream.hpp  FlightLog.cpp  FlightLog.hpp  FlightModule.cpp  FlightModule.hpp
src/red4ext/x64/Debug/: FlightControl.dll.recipe  FmodHelper.h.ifc.dt.d.json  FmodHelper.h.ifc.dt.md.json  FmodHelper.h.ifc.dt.md.json.command  flight_control.dll.recipe  flight_control.vcxproj.FileListAbsolute.txt  vc142.idb
src/red4ext/x64/Debug/FlightControl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FlightControl.lastbuildstate  FlightControl.write.1u.tlog  link.22620.delete.1.tlog  link.41456.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/red4ext/x64/Debug/flight_control.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  flight_control.lastbuildstate  flight_control.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/red4ext/x64/Release/: FlightControl.dll.recipe  flight_control.dll.recipe
src/red4ext/x64/Release/FlightControl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FlightControl.lastbuildstate  FlightControl.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
src/red4ext/x64/Release/flight_control.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  flight_control.lastbuildstate  flight_control.write.1u.tlog  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
(+521 files in other folders)
